syntax = "proto3";
option java_multiple_files = true;
option csharp_namespace = "GrpcService.Protos";

package dk.via.sep3;

message DTOBook {
  string title = 1;
  string author = 2;
  string isbn = 3;
  string state = 4;
}

message GetAllBooksRequest {
}

message GetAllBooksResponse {
  repeated DTOBook books = 1;
}

service BookService {
  rpc GetAllBooks (GetAllBooksRequest) returns (GetAllBooksResponse);
}